<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="welcome">Welcome to</string>
    <string name="MEDCheck">MEDCheck</string>
    <string name="app_name">MEDCheck</string>
    <string name="mobile">mobile</string>
    <string name="app_desc">Using this app, you can keep up with your meds, refills, and appointments.</string>
    <string name="start_message"> Gain points and stay healthy.</string>
    <string name="start_insn">Click start to signup.</string>
    <string name="start">Start</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="feedbacktitle">Enter Your Information</string>
    <string name="firstname">First Name</string>
    <string name="lastname">Last Name</string>
    <string name="pick_date">Diagnosis Date</string>
    <string name="viralload">Viral Load</string>
    <string name="phone">Phone Number</string>
    <string name="providerphone">Provider Number</string>
    <string name="next">Next</string>
    <string name="medicinetitle">What medicine do you take?</string>
    <string name="medicinename">Medicine Name</string>
    <string name="addmedicine">Add</string>
    <string name="medicinetimetitle">What time do you take your meds?</string>
    <string name="medicinetime">Time</string>
    <string name="prev">Previous</string>
    <string name="remindertime2">before I need to take the medicine.</string>
    <string name="remindertime">Remind me...</string>
    <string name="title_activity_home_page">Home Page</string>
    <string name="submit">Submit</string>
    <string name="alarm_service_started">MedRem Alarm Activated.</string>
    <string name="alarm_service_label">MedRem Alarm</string>
    <string name="activity_alarm_service">Alarm Page</string>
    <string name="scheduled">Alarm Scheduled</string>
    <string name="unscheduled">Alarm Unscheduled</string>
    <string name="remindermessage">What message should appear when you are reminded?</string>
    <string name="myremindermessage">My custom text...</string>
    <string name="appointmenttitle">Set your appointments</string>
    <string name="avatartitle">Choose Your Avatar</string>
    <string name="refilltitle">Set your refill dates</string>
    <string name="okmessage">You have missed three alarms, are you okay?</string>
    <string name="title_activity_basic_info">Basic Info</string>
    <string name="title_activity_settings_reminders">SettingsRemindersActivity</string>
    <string name="title_activity_settings_refills">SettingsRefillsActivity</string>
    <string name="title_activity_settings_appointments">SettingsAppointmentsActivity</string>
    <string name="title_activity_settings_medication">SettingsMedicationActivity</string>
    <string name="title_activity_settings_basic_info">SettingsBasicInfoActivity</string>
    <string name="title_activity_registration_basic_info">Basic Info</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_registration_medication">Medication</string>
    <string name="title_activity_registration_reminders">Reminders</string>
    <string name="title_activity_registration_message">Alarm Message</string>
    <string name="title_activity_registration_appointments">Appointments</string>
    <string name="title_activity_registration_refills">Refills</string>
    <string name="title_activity_registration_avatar">Avatar</string>
    <string name="lost">You Lost!</string>
    <string name="won">You Won!</string>
    <string name="asteroids">VirusBusters</string>
    <string name="play">Play Virus Busters!</string>
    <string name="streak">Med Streak:</string>
    <string name="zero">0</string>

    <string-array name="sleep_array">
        <item>5</item>
        <item>10</item>
        <item>15</item>
        <item>30</item>
        <item>45</item>
        <item>60</item>
    </string-array>
    <string-array name="rem_array">
        <item>0</item>
        <item>5</item>
        <item>10</item>
        <item>15</item>
        <item>20</item>
        <item>25</item>
    </string-array>

    <string name="title_activity_registration_reminders_gb">Reminder</string>
    <string name="title_activity_registration_startup">MedCheck</string>
    <string name="title_activity_streak">VirusBusters</string>
    <string name="appointment">Appointment Date:</string>
    <string name="refill">Refill Date:</string>

</resources>