<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/ScrollView01"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:scrollbars="vertical" >

    <ViewFlipper
        android:id="@+id/view_flipper"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="6dip" >

        <LinearLayout
            android:id="@+id/FirstPage"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/FormTitle"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="10dp"
                android:layout_weight="1"
                android:text="@string/feedbacktitle"
                android:textSize="10pt" >
            </TextView>

            <EditText
                android:id="@+id/EditFirstName"
                android:layout_width="fill_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:ems="10"
                android:hint="@string/firstname"
                android:inputType="textPersonName" />

            <EditText
                android:id="@+id/EditLastName"
                android:layout_width="fill_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:hint="@string/lastname"
                android:inputType="textPersonName" >
            </EditText>

            <EditText
                android:id="@+id/EditDate"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:focusableInTouchMode="false"
                android:inputType="date"
                android:onClick="showDatePickerDialog"
                android:text="@string/pick_date" >
            </EditText>

            <EditText
                android:id="@+id/EditViralLoad"
                android:layout_width="fill_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:hint="@string/viralload"
                android:inputType="number" >
            </EditText>

            <EditText
                android:id="@+id/EditPhone"
                android:layout_width="fill_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:hint="@string/phone"
                android:inputType="phone" >
            </EditText>

            <EditText
                android:id="@+id/EditProviderPhone"
                android:layout_width="fill_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:hint="@string/providerphone"
                android:inputType="phone" >
            </EditText>

            <Button
                android:id="@+id/NextButton"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:onClick="toNextPage"
                android:text="@string/next" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/SecondPage"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >
            <TextView
                android:id="@+id/FormTitle2"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="10dp"
                android:layout_weight="1"
                android:text="@string/feedbacktitle"
                android:textSize="10pt" >
            </TextView>
        </LinearLayout>
    </ViewFlipper>

</ScrollView>